Updated Danish translation

--- a/po/da.po
+++ b/po/da.po
@@ -1,10 +1,11 @@
 # Danish translation for gnome-color-manager.
-# Copyright (C) 2009-10, 2012-13, 2015-16 gnome-color-managers.
+# Copyright (C) 2009-10, 2012-13, 2015-17 gnome-color-managers.
 # This file is distributed under the same license as the gnome-color-manager package.
 #
 # Joe Hansen (joedalton2@yahoo.dk), 2009.
 # Ask Hjorth Larsen <asklarsen@gmail.com>, 2010, 2012-2016.
 # Kenneth Nielsen <k.nielsen81@gmail.com>, 2013-2014.
+# Joe Hansen <joedalton2@yahoo.dk>, 2017.
 #
 # Bemærk at profile ofte bruges både som substantiv og verbum:
 #
@@ -17,10 +18,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
-"Report-Msgid-Bugs-To: "
-"http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-color-manager&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2017-01-26 04:23+0000\n"
-"PO-Revision-Date: 2016-09-08 03:14+0200\n"
+"Report-Msgid-Bugs-To: https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
+"color-manager&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2017-02-23 16:47+0000\n"
+"PO-Revision-Date: 2017-03-05 03:14+0200\n"
 "Last-Translator: Kenneth Nielsen <k.nielsen81@gmail.com>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
@@ -73,7 +74,7 @@ msgstr "Farvekalibrering"
 #: data/gcm-calibrate.desktop.in:6 data/gcm-picker.desktop.in:6
 #: data/org.gnome.ColorProfileViewer.desktop.in:6
 msgid "gnome-color-manager"
-msgstr ""
+msgstr "gnome-color-manager"
 
 # ICC-profilhåndtering
 #: data/gcm-import.desktop.in:3
@@ -87,7 +88,7 @@ msgstr "Installer ICC-profiler"
 #. Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 #: data/gcm-import.desktop.in:10
 msgid "application-vnd.iccprofile"
-msgstr ""
+msgstr "application-vnd.iccprofile"
 
 #. Window title, where the user can pick spot colors using a measuring device
 #: data/gcm-picker.desktop.in:3 data/gcm-picker.ui:27
@@ -773,11 +774,10 @@ msgstr ""
 
 #. TRANSLATORS: this is the final intro page text
 #: src/gcm-calibrate-main.c:692
-msgid ""
-"You can cancel this process at any stage by pressing the cancel button."
+msgid "You can cancel this process at any stage by pressing the cancel button."
 msgstr ""
-"Du kan annullere denne proces på ethvert tidspunkt ved at trykke på "
-"annullér-knappen."
+"Du kan annullere denne proces på ethvert tidspunkt ved at trykke på annullér-"
+"knappen."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: src/gcm-calibrate-main.c:698
@@ -828,12 +828,12 @@ msgstr ""
 
 #: src/gcm-calibrate-main.c:835
 msgid ""
-"You can use the profile with <a href=\"import-linux\">Linux</a>, <a "
-"href=\"import-osx\">Apple OS X</a> and <a href=\"import-windows\">Microsoft "
+"You can use the profile with <a href=\"import-linux\">Linux</a>, <a href="
+"\"import-osx\">Apple OS X</a> and <a href=\"import-windows\">Microsoft "
 "Windows</a> systems."
 msgstr ""
-"Du kan bruge profilen med <a href=\"import-linux\">Linux</a>-, <a "
-"href=\"import-osx\">Apple OS X</a>- og <a href=\"import-windows\">Microsoft "
+"Du kan bruge profilen med <a href=\"import-linux\">Linux</a>-, <a href="
+"\"import-osx\">Apple OS X</a>- og <a href=\"import-windows\">Microsoft "
 "Windows</a>-systemer."
 
 #. TRANSLATORS: this is the calibration wizard page title
@@ -894,8 +894,8 @@ msgid ""
 "Configure your display with custom color settings and ensure the RGB "
 "channels are set to the same values."
 msgstr ""
-"Konfigurer din skærm med tilpasset farveopsætning og sikre dig at "
-"RGB-kanalerne er angivet med de samme værdier."
+"Konfigurer din skærm med tilpasset farveopsætning og sikre dig at RGB-"
+"kanalerne er angivet med de samme værdier."
 
 #. TRANSLATORS: dialog message, addition to bullet item
 #: src/gcm-calibrate-main.c:941
@@ -1538,8 +1538,7 @@ msgstr "Sensoren har ingen platformsspecifik driver."
 #. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: src/gcm-picker.c:359
 msgid "The attached colorimeter is not capable of reading a spot color."
-msgstr ""
-"Det tilsluttede kolorimeter er ikke i stand til at læse et farvepunkt."
+msgstr "Det tilsluttede kolorimeter er ikke i stand til at læse et farvepunkt."
 
 #. TRANSLATORS: this is when there are no profiles that can be used;
 #. * the search term is either "RGB" or "CMYK"
@@ -1867,10 +1866,8 @@ msgstr "Profilen har følgende problemer:"
 # 19 December 2009, 22:16:52
 #. TRANSLATORS: this is the icc creation date strftime format
 #: src/gcm-viewer.c:1101
-#, fuzzy
-#| msgid "%B %e %Y, %I:%M:%S %p"
 msgid "%B %e %Y, %I∶%M∶%S %p"
-msgstr "%e. %B %Y, %H:%M:%S"
+msgstr "%e. %B %Y, %H∶%M∶%S"
 
 #. TRANSLATORS: this is the tooltip when the profile can be deleted
 #: src/gcm-viewer.c:1124
@@ -1891,4 +1888,3 @@ msgstr "Angiv den specifikke profil der skal vises"
 #: src/gcm-viewer.c:1620
 msgid "Set the specific file to show"
 msgstr "Angiv den specifikke fil der skal vises"
-
