--- a/po/pl.po
+++ b/po/pl.po
@@ -1,16 +1,16 @@
 # Polish translation for gnome-color-manager.
-# Copyright © 2009-2016 the gnome-color-manager authors.
+# Copyright © 2009-2017 the gnome-color-manager authors.
 # This file is distributed under the same license as the gnome-color-manager package.
-# Piotr Drąg <piotrdrag@gmail.com>, 2009-2016.
-# Aviary.pl <community-poland@mozilla.org>, 2009-2016.
+# Piotr Drąg <piotrdrag@gmail.com>, 2009-2017.
+# Aviary.pl <community-poland@mozilla.org>, 2009-2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
+"Report-Msgid-Bugs-To: https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2016-12-06 16:55+0000\n"
-"PO-Revision-Date: 2016-12-11 15:35+0100\n"
+"POT-Creation-Date: 2017-03-07 11:39+0000\n"
+"PO-Revision-Date: 2017-03-27 21:17+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -312,10 +312,12 @@ msgstr "Podgląd profilu kolorów"
 msgid "Color;ICC;"
 msgstr "Kolor;Kolory;ICC;"
 
+#. TRANSLATORS: title, default paramters needed to calibrate_argyll
 #: src/gcm-calibrate-argyll.c:362
 msgid "Getting default parameters"
 msgstr "Uzyskiwanie domyślnych parametrów"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:367
 msgid ""
 "This pre-calibrates the screen by sending colored and gray patches to your "
@@ -324,18 +326,22 @@ msgstr ""
 "Ten proces wstępnie kalibruje ekran przez wysłanie kolorowych i szarych łat "
 "na ekran i mierzenie ich za pomocą urządzenia sprzętowego."
 
+#. TRANSLATORS: title, patches are specific colours used in calibration
 #: src/gcm-calibrate-argyll.c:445
 msgid "Reading the patches"
 msgstr "Odczytywanie łat"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:450
 msgid "Reading the patches using the color measuring instrument."
 msgstr "Odczytywanie łat za pomocą urządzenia do mierzenia kolorów."
 
+#. TRANSLATORS: title, drawing means painting to the screen
 #: src/gcm-calibrate-argyll.c:538
 msgid "Drawing the patches"
 msgstr "Rysowanie łat"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:543
 msgid ""
 "Drawing the generated patches to the screen, which will then be measured by "
@@ -344,48 +350,59 @@ msgstr ""
 "Rysowanie utworzonych łat na ekranie, które następnie zostaną zmierzone "
 "przez urządzenie sprzętowe."
 
+#. TRANSLATORS: title, a profile is a ICC file
 #: src/gcm-calibrate-argyll.c:628 src/gcm-calibrate-argyll.c:919
 msgid "Generating the profile"
 msgstr "Tworzenie profilu"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:633
 msgid "Generating the ICC color profile that can be used with this screen."
 msgstr "Tworzenie profilu kolorów ICC, który może być używany na tym ekranie."
 
+#. TRANSLATORS: title, a profile is a ICC file
 #: src/gcm-calibrate-argyll.c:773
 msgid "Copying files"
 msgstr "Kopiowanie plików"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:778
 msgid "Copying source image, chart data and CIE reference values."
 msgstr ""
 "Kopiowanie plików źródłowych, danych wykresów i wartości referencyjnych CIE."
 
+#. TRANSLATORS: title, drawing means painting to the screen
 #: src/gcm-calibrate-argyll.c:826
 msgid "Measuring the patches"
 msgstr "Mierzenie łat"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:831
 msgid "Detecting the reference patches and measuring them."
 msgstr "Wykrywanie łat referencyjnych i mierzenie ich."
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:924
 msgid "Generating the ICC color profile that can be used with this device."
 msgstr ""
 "Tworzenie profilu kolorów ICC, który może być używany z tym urządzeniem."
 
+#. TRANSLATORS: title, patches are specific colors used in calibration
 #: src/gcm-calibrate-argyll.c:1236
 msgid "Printing patches"
 msgstr "Drukowanie łat"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:1241
 msgid "Rendering the patches for the selected paper and ink."
 msgstr "Renderowanie łat dla wybranego papieru i tuszu."
 
+#. TRANSLATORS: title, patches are specific colours used in calibration
 #: src/gcm-calibrate-argyll.c:1565
 msgid "Wait for the ink to dry"
 msgstr "Oczekiwanie na wyschnięcie tuszu"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:1570
 msgid ""
 "Please wait a few minutes for the ink to dry. Profiling damp ink will "
@@ -395,18 +412,22 @@ msgstr ""
 "tuszu spowoduje powstanie błędnego profilu i może uszkodzić urządzenie do "
 "mierzenia kolorów."
 
+#. TRANSLATORS: title, instrument refers to a calibration device
 #: src/gcm-calibrate-argyll.c:1714
 msgid "Set up instrument"
 msgstr "Ustawianie urządzenia"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:1719
 msgid "Setting up the instrument for use…"
 msgstr "Ustawianie urządzenia do użycia…"
 
+#. TRANSLATORS: title, the calibration failed
 #: src/gcm-calibrate-argyll.c:1896 src/gcm-calibrate-argyll.c:1961
 msgid "Calibration error"
 msgstr "Błąd kalibracji"
 
+#. TRANSLATORS: message, the sample was not read correctly
 #: src/gcm-calibrate-argyll.c:1901
 msgid "The sample could not be read at this time."
 msgstr "Nie można odczytać próbki w tej chwili."
@@ -417,10 +438,12 @@ msgstr "Nie można odczytać próbki w tej chwili."
 msgid "Retry"
 msgstr "Ponów"
 
+#. TRANSLATORS: message, no firmware is available
 #: src/gcm-calibrate-argyll.c:1967
 msgid "No firmware is installed for this instrument."
 msgstr "Nie zainstalowano oprogramowania sprzętowego dla tego urządzenia."
 
+#. TRANSLATORS: message, the image wasn't good enough
 #: src/gcm-calibrate-argyll.c:1972
 msgid ""
 "The pattern match wasn’t good enough. Ensure you have the correct type of "
@@ -429,6 +452,7 @@ msgstr ""
 "Dopasowanie do wzorca nie jest dostatecznie dobre. Proszę się upewnić, że "
 "wybrano poprawny typ docelowy."
 
+#. TRANSLATORS: message, the sensor got no readings
 #: src/gcm-calibrate-argyll.c:1978
 msgid ""
 "The measuring instrument got no valid readings. Please ensure the aperture "
@@ -437,6 +461,7 @@ msgstr ""
 "Urządzenie do mierzenia nie otrzymało prawidłowych odczytów. Proszę się "
 "upewnić, że przysłona jest w pełni otwarta."
 
+#. TRANSLATORS: message, the colorimeter has got confused
 #: src/gcm-calibrate-argyll.c:1983
 msgid ""
 "The measuring instrument is busy and is not starting up. Please remove the "
@@ -445,18 +470,22 @@ msgstr ""
 "Urządzenie do mierzenia jest zajęte i nie jest uruchamiane. Proszę wyjąć "
 "wtyczkę USB i włożyć ją ponownie przed próbą użycia tego urządzenia."
 
+#. TRANSLATORS: dialog title
 #: src/gcm-calibrate-argyll.c:2021
 msgid "Reading target"
 msgstr "Odczytywanie celu"
 
+#. TRANSLATORS: message, no firmware is available
 #: src/gcm-calibrate-argyll.c:2026
 msgid "Failed to read the strip correctly."
 msgstr "Poprawne odczytanie paska się nie powiodło."
 
+#. TRANSLATORS: dialog title
 #: src/gcm-calibrate-argyll.c:2047
 msgid "Reading sample"
 msgstr "Odczytywanie próbki"
 
+#. TRANSLATORS: message, the sample read failed due to misread
 #: src/gcm-calibrate-argyll.c:2052
 msgid "Failed to read the color sample correctly."
 msgstr "Poprawne odczytanie próbki koloru się nie powiodło."
@@ -481,10 +510,12 @@ msgstr ""
 "Jeśli na pewno mierzono właściwy, to w porządku, mógł to być tylko nietypowy "
 "papier."
 
+#. TRANSLATORS: title, the calibration failed
 #: src/gcm-calibrate-argyll.c:2111
 msgid "Device Error"
 msgstr "Błąd urządzenia"
 
+#. TRANSLATORS: message, the sample was not read correctly
 #: src/gcm-calibrate-argyll.c:2116
 msgid "The device could not measure the color spot correctly."
 msgstr "Urządzenie nie może poprawnie zmierzyć plamy koloru."
@@ -531,30 +562,37 @@ msgstr ""
 "W razie pomyłki należy po prostu zwolnić przełącznik, a będzie można "
 "spróbować ponownie."
 
+#. TRANSLATORS: title, printing reference files to media
 #: src/gcm-calibrate-argyll.c:2241
 msgid "Printing"
 msgstr "Drukowanie"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:2250
 msgid "Preparing the data for the printer."
 msgstr "Przygotowywanie danych dla drukarki."
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:2258
 msgid "Sending the targets to the printer."
 msgstr "Wysyłanie celów do drukarki."
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:2264
 msgid "Printing the targets…"
 msgstr "Drukowanie celów…"
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:2270
 msgid "The printing has finished."
 msgstr "Drukowanie zostało ukończone."
 
+#. TRANSLATORS: dialog message
 #: src/gcm-calibrate-argyll.c:2276
 msgid "The print was aborted."
 msgstr "Drukowanie zostało przerwane."
 
+#. TRANSLATORS: title, instrument is a hardware color calibration sensor
 #: src/gcm-calibrate.c:348
 msgid "Please attach instrument"
 msgstr "Proszę podłączyć urządzenie"
@@ -588,10 +626,12 @@ msgstr "Należy trzymać urządzenie na ekranie podczas trwania kalibracji."
 msgid "Continue"
 msgstr "Kontynuuj"
 
+#. TRANSLATORS: title, instrument is a hardware color calibration sensor
 #: src/gcm-calibrate.c:392 src/gcm-calibrate.c:428
 msgid "Please configure instrument"
 msgstr "Proszę skonfigurować urządzenie"
 
+#. TRANSLATORS: this is when the user has to change a setting on the sensor, and we're showing a picture
 #: src/gcm-calibrate.c:403
 msgid ""
 "Please set the measuring instrument to screen mode like the image below."
@@ -599,10 +639,12 @@ msgstr ""
 "Proszę ustawić urządzenie do mierzenia na tryb ekranu, jak na obrazie "
 "poniżej."
 
+#. TRANSLATORS: this is when the user has to change a setting on the sensor
 #: src/gcm-calibrate.c:408
 msgid "Please set the measuring instrument to screen mode."
 msgstr "Proszę ustawić urządzenie do mierzenia na tryb ekranu."
 
+#. TRANSLATORS: this is when the user has to change a setting on the sensor, and we're showing a picture
 #: src/gcm-calibrate.c:442
 msgid ""
 "Please set the measuring instrument to calibration mode like the image below."
@@ -610,6 +652,7 @@ msgstr ""
 "Proszę ustawić urządzenie do mierzenia na tryb kalibracji, jak na obrazie "
 "poniżej."
 
+#. TRANSLATORS: this is when the user has to change a setting on the sensor
 #: src/gcm-calibrate.c:447
 msgid "Please set the measuring instrument to calibration mode."
 msgstr "Proszę ustawić urządzenie do mierzenia na tryb kalibracji."
@@ -663,10 +706,12 @@ msgstr "Nie ukończono kalibracji"
 msgid "Are you sure you want to cancel the calibration?"
 msgstr "Na pewno anulować kalibrację?"
 
+#. TRANSLATORS: button text
 #: src/gcm-calibrate-main.c:144
 msgid "Continue calibration"
 msgstr "Kontynuuj kalibrację"
 
+#. TRANSLATORS: button text
 #: src/gcm-calibrate-main.c:148
 msgid "Cancel and close"
 msgstr "Anuluj i zamknij"
@@ -860,10 +905,12 @@ msgstr ""
 msgid "Check Settings"
 msgstr "Sprawdzenie ustawień"
 
+#. TRANSLATORS: dialog message saying the argyllcms is not installed
 #: src/gcm-calibrate-main.c:1000
 msgid "Calibration and profiling software is not installed."
 msgstr "Oprogramowanie do kalibracji i profilowania nie jest zainstalowane."
 
+#. TRANSLATORS: dialog message saying the color targets are not installed
 #: src/gcm-calibrate-main.c:1003
 msgid "These tools are required to build color profiles for devices."
 msgstr "Te narzędzia są wymagane, aby budować profile kolorów dla urządzeń."
@@ -1169,6 +1216,7 @@ msgstr "Zwykła"
 msgid "Quick"
 msgstr "Szybka"
 
+#. TRANSLATORS: radio options for calibration precision
 #: src/gcm-calibrate-main.c:1633
 #, c-format
 msgid "(about %u sheet of paper)"
@@ -1177,6 +1225,7 @@ msgstr[0] "(około %u kartki papieru)"
 msgstr[1] "(około %u kartek papieru)"
 msgstr[2] "(około %u kartek papieru)"
 
+#. TRANSLATORS: radio options for calibration precision
 #: src/gcm-calibrate-main.c:1644
 #, c-format
 msgid "(about %u minute)"
@@ -1314,14 +1363,17 @@ msgstr "Wyświetla opcje debugowania"
 msgid "ICC profile to install"
 msgstr "Profil ICC do zainstalowania"
 
+#. TRANSLATORS: nothing was specified on the command line
 #: src/gcm-import.c:117
 msgid "No filename specified"
 msgstr "Nie podano nazwy pliku"
 
+#. TRANSLATORS: could not read file
 #: src/gcm-import.c:137 src/gcm-viewer.c:1291
 msgid "Failed to open ICC profile"
 msgstr "Otwarcie profilu ICC się nie powiodło"
 
+#. TRANSLATORS: parsing error
 #: src/gcm-import.c:142
 #, c-format
 msgid "Failed to parse file: %s"
@@ -1338,6 +1390,7 @@ msgstr "Opis profilu: %s"
 msgid "Profile copyright:"
 msgstr "Prawa autorskie do profilu:"
 
+#. TRANSLATORS: color profile already been installed
 #: src/gcm-import.c:201
 msgid "Color profile is already imported"
 msgstr "Profil kolorów jest już zaimportowany"
@@ -1371,6 +1424,7 @@ msgstr "Zaimportować profil kolorów?"
 msgid "Import"
 msgstr "Zaimportuj"
 
+#. TRANSLATORS: could not read file
 #: src/gcm-import.c:271 src/gcm-viewer.c:1323
 msgid "Failed to import file"
 msgstr "Zaimportowanie pliku się nie powiodło"
@@ -1454,10 +1508,12 @@ msgstr "Program inspekcji EDID"
 msgid "Unknown"
 msgstr "Nieznany"
 
+#. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: src/gcm-picker.c:334
 msgid "No colorimeter is attached."
 msgstr "Nie podłączono kolorymetra."
 
+#. TRANSLATORS: this is displayed if VTE support is not enabled
 #: src/gcm-picker.c:350
 msgid "The sensor has no native driver."
 msgstr "Czujnik nie ma natywnego sterownika."
@@ -1787,7 +1843,7 @@ msgstr "Profil ma poniższe problemy:"
 #. TRANSLATORS: this is the icc creation date strftime format
 #: src/gcm-viewer.c:1101
 msgid "%B %e %Y, %I∶%M∶%S %p"
-msgstr "%e %B %Y, %H∶%M∶%S"
+msgstr "%-d %B %Y, %H∶%M∶%S"
 
 #. TRANSLATORS: this is the tooltip when the profile can be deleted
 #: src/gcm-viewer.c:1124
