Updated Danish translation

--- a/po/da.po
+++ b/po/da.po
@@ -18,9 +18,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
-"Report-Msgid-Bugs-To: https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
-"color-manager&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2017-02-23 16:47+0000\n"
+"Report-Msgid-Bugs-To: "
+"https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-color-manager&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2017-07-28 09:58+0000\n"
 "PO-Revision-Date: 2017-03-05 03:14+0200\n"
 "Last-Translator: Kenneth Nielsen <k.nielsen81@gmail.com>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
@@ -774,10 +774,11 @@ msgstr ""
 
 #. TRANSLATORS: this is the final intro page text
 #: src/gcm-calibrate-main.c:692
-msgid "You can cancel this process at any stage by pressing the cancel button."
+msgid ""
+"You can cancel this process at any stage by pressing the cancel button."
 msgstr ""
-"Du kan annullere denne proces på ethvert tidspunkt ved at trykke på annullér-"
-"knappen."
+"Du kan annullere denne proces på ethvert tidspunkt ved at trykke på "
+"annullér-knappen."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: src/gcm-calibrate-main.c:698
@@ -828,12 +829,12 @@ msgstr ""
 
 #: src/gcm-calibrate-main.c:835
 msgid ""
-"You can use the profile with <a href=\"import-linux\">Linux</a>, <a href="
-"\"import-osx\">Apple OS X</a> and <a href=\"import-windows\">Microsoft "
+"You can use the profile with <a href=\"import-linux\">Linux</a>, <a "
+"href=\"import-osx\">Apple OS X</a> and <a href=\"import-windows\">Microsoft "
 "Windows</a> systems."
 msgstr ""
-"Du kan bruge profilen med <a href=\"import-linux\">Linux</a>-, <a href="
-"\"import-osx\">Apple OS X</a>- og <a href=\"import-windows\">Microsoft "
+"Du kan bruge profilen med <a href=\"import-linux\">Linux</a>-, <a "
+"href=\"import-osx\">Apple OS X</a>- og <a href=\"import-windows\">Microsoft "
 "Windows</a>-systemer."
 
 #. TRANSLATORS: this is the calibration wizard page title
@@ -894,8 +895,8 @@ msgid ""
 "Configure your display with custom color settings and ensure the RGB "
 "channels are set to the same values."
 msgstr ""
-"Konfigurer din skærm med tilpasset farveopsætning og sikre dig at RGB-"
-"kanalerne er angivet med de samme værdier."
+"Konfigurer din skærm med tilpasset farveopsætning og sikre dig at "
+"RGB-kanalerne er angivet med de samme værdier."
 
 #. TRANSLATORS: dialog message, addition to bullet item
 #: src/gcm-calibrate-main.c:941
@@ -1538,7 +1539,8 @@ msgstr "Sensoren har ingen platformsspecifik driver."
 #. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: src/gcm-picker.c:359
 msgid "The attached colorimeter is not capable of reading a spot color."
-msgstr "Det tilsluttede kolorimeter er ikke i stand til at læse et farvepunkt."
+msgstr ""
+"Det tilsluttede kolorimeter er ikke i stand til at læse et farvepunkt."
 
 #. TRANSLATORS: this is when there are no profiles that can be used;
 #. * the search term is either "RGB" or "CMYK"
@@ -1804,7 +1806,7 @@ msgstr "Skærmkompensationstabellen er ugyldig"
 #. TRANSLATORS: the profile is broken
 #: src/gcm-viewer.c:811
 msgid "A scum dot is present for media white"
-msgstr "Der er en \"scum dot\" for hvid på mediet"
+msgstr "Der er en “scum dot” for hvid på mediet"
 
 #. TRANSLATORS: the profile is broken
 #: src/gcm-viewer.c:815
@@ -1888,3 +1890,5 @@ msgstr "Angiv den specifikke profil der skal vises"
 #: src/gcm-viewer.c:1620
 msgid "Set the specific file to show"
 msgstr "Angiv den specifikke fil der skal vises"
+
+
