Fixes to Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the gnome-color-manager package.
 # Joan Duran <jodufi@gmail.com>, 2010, 2012.
 # Gil Forcada <gilforcada@guifi.net>, 2012, 2013.
+# Jordi Serratosa <jordis@softcatala.cat>, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2017-03-07 11:39+0000\n"
+"POT-Creation-Date: 2017-07-28 09:58+0000\n"
 "PO-Revision-Date: 2016-10-19 12:36+0200\n"
 "Last-Translator: Robert Antoni Buj Gelonch <rbuj@fedoraproject.org>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
@@ -418,7 +419,7 @@ msgid ""
 "Please wait a few minutes for the ink to dry. Profiling damp ink will "
 "produce a poor profile and may damage your color measuring instrument."
 msgstr ""
-"Espereu uns minuts a que s'assequi la tinta. La tinta de perfilat humida "
+"Espereu uns minuts que s'assequi la tinta. La tinta de perfilat humida "
 "produirà un perfil pobre i pot fer malbé l'instrument de mesura del color."
 
 #. TRANSLATORS: title, instrument refers to a calibration device
