Updated Czech translation

--- a/po/cs.po
+++ b/po/cs.po
@@ -41,7 +41,7 @@ msgid ""
 "GNOME Color Profile Viewer shows installed color profiles on your system and "
 "allows you to calibrate displays, printers and cameras using a wizard."
 msgstr ""
-"Prohlížeč profilů barev pro pracovní prostředí GNOME zobrazuje profily "
+"Prohlížeč profilů barev pro uživatelské prostředí GNOME zobrazuje profily "
 "instalované ve vašem systému a umožňuje kalibrovat displeje, tiskárny a "
 "fotoaparáty pomocí průvodce. "
 
