--- a/help/pl/pl.po
+++ b/help/pl/pl.po
@@ -1,13 +1,13 @@
 # Polish translation for gnome-color-manager help.
 # Copyright © 2017 the gnome-color-manager authors.
-# This file is distributed under the same license as the gnome-color-manager package.
+# This file is distributed under the same license as the gnome-color-manager help.
 # Piotr Drąg <piotrdrag@gmail.com>, 2017.
 # Aviary.pl <community-poland@mozilla.org>, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager-help\n"
-"POT-Creation-Date: 2017-08-07 15:36+0000\n"
+"POT-Creation-Date: 2018-01-26 15:52+0000\n"
 "PO-Revision-Date: 2017-08-21 02:11+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
