Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -220,7 +220,7 @@ msgstr "x"
 #: data/gcm-viewer.ui:552
 msgid "A CIE 1931 diagram shows a 2D representation of the profile gamut"
 msgstr ""
-"Un diagrama CIE 1931 mostra una representació en 2D de la gama del color del "
+"Un diagrama CIE 1931 mostra una representació en 2D de la gamma del color del "
 "perfil"
 
 #: data/gcm-viewer.ui:569
@@ -1766,7 +1766,7 @@ msgstr "Brillantor de la pantalla"
 #. TRANSLATORS: e.g. the 3D volume of the gamut graph
 #: src/gcm-viewer.c:699
 msgid "Gamut volume"
-msgstr "Volum del gamma de color"
+msgstr "Volum de la gamma de color"
 
 #. TRANSLATORS: e.g. what proportion of sRGB is covered
 #: src/gcm-viewer.c:701
@@ -1857,7 +1857,7 @@ msgstr "El perfil té els problemes següents:"
 #. TRANSLATORS: this is the icc creation date strftime format
 #: src/gcm-viewer.c:1101
 msgid "%B %e %Y, %I∶%M∶%S %p"
-msgstr "%e de %B de %Y, %H:%M:%S"
+msgstr "%e %B de %Y, %H:%M:%S"
 
 #. TRANSLATORS: this is the tooltip when the profile can be deleted
 #: src/gcm-viewer.c:1124
@@ -1891,9 +1891,6 @@ msgstr "Estableix el fitxer que s'ha de mostrar"
 #~ msgid "This 3D hull is what the profile looks like in Lab space"
 #~ msgstr ""
 #~ "Aquesta visualització en 3D és al que s'assembla el perfil en l'espai Lab"
-
-#~ msgid "3D Gamut"
-#~ msgstr "Gama del color en 3D"
 
 #~ msgid "LCD"
 #~ msgstr "LCD"
