Fixes to Catalan translation

--- a/help/ca/ca.po
+++ b/help/ca/ca.po
@@ -46,7 +46,7 @@ msgstr "Richard Hughes"
 #. (itstool) path: page/title
 #: C/color-import-linux.page:17
 msgid "Installing an ICC profile on Linux"
-msgstr "Instal·lació d'un perfil ICC al Linux "
+msgstr "Instal·lació d'un perfil ICC al Linux"
 
 #. (itstool) path: page/p
 #: C/color-import-linux.page:18
@@ -76,7 +76,7 @@ msgstr ""
 #. (itstool) path: info/desc
 #: C/color-import-windows.page:9
 msgid "How to import an existing ICC profile using a Windows system."
-msgstr "Com importar un peril ICC en un sistema Windows."
+msgstr "Com importar un perfil ICC en un sistema Windows."
 
 #. (itstool) path: page/title
 #: C/color-import-windows.page:17
@@ -142,7 +142,7 @@ msgid ""
 "<gui>Color</gui> item to the control panel and allows the calibration curves "
 "from default profile to be easily set at each startup."
 msgstr ""
-"Windows XP requereix que un programa s'inicii durant l'arrencada per copiar "
+"Windows XP requereix que un programa s'iniciï durant l'arrencada per copiar "
 "les corbes de calibratge a la targeta de vídeo. Això es pot fer utilitzant "
 "l'<app>Adobe Gamma</app>, el <app>LUT Loader</app> o de franc, utilitzant "
 "el <app href=\"https://www.microsoft.com/download/en/details.aspx?"
@@ -221,7 +221,7 @@ msgid ""
 msgstr ""
 "Per establir les rampes de gamma tanqueu el diàleg i feu clic a <gui>Torna a "
 "carregar els calibratges actuals</gui>. A partir d'ara, cada cop que "
-"arrenqueu, es carregara el perfil de les corbes de calibratge."
+"arrenqueu, es carregarà el perfil de les corbes de calibratge."
 
 #. (itstool) path: info/desc
 #: C/color-import-osx.page:9
