--- a/po/ca.po
+++ b/po/ca.po
@@ -493,7 +493,7 @@ msgstr "No s'ha pogut llegir la banda correctament."
 #. TRANSLATORS: dialog title
 #: src/gcm-calibrate-argyll.c:2047
 msgid "Reading sample"
-msgstr "S'està llegint la mostra"
+msgstr "Exemple de lectura"
 
 #. TRANSLATORS: message, the sample read failed due to misread
 #: src/gcm-calibrate-argyll.c:2052
