Replace 404 projects.gnome.org with gitlab.gnome.org URLs

--- a/README
+++ b/README
@@ -26,5 +26,5 @@ This project has the following features:
   be used for a specific device or device type. This is session activated and
   is only started when it is needed, and quits after a small period of idleness.
 
-For more information, please see http://projects.gnome.org/gnome-color-manager/
+For more information, please see https://gitlab.gnome.org/GNOME/gnome-color-manager
 
