Update Catalan translation

--- a/help/ca/ca.po
+++ b/help/ca/ca.po
@@ -89,7 +89,7 @@ msgid ""
 "The method for assigning the profile to a device and also using the embedded "
 "calibration curves is different for each version of Microsoft Windows."
 msgstr ""
-"El mètode per assignar un perfil a un dispositiu i també utilitzar les "
+"El mètode per a assignar un perfil a un dispositiu i també utilitzar les "
 "corbes de calibratge incrustades és diferent per a cada versió de Microsoft "
 "Windows."
 
@@ -127,7 +127,7 @@ msgid ""
 "replaced."
 msgstr ""
 "Si esteu substituint un perfil preexistent al Windows XP, la drecera "
-"anterior no funcionarà. Per substituir el perfil preexistent el nou perfil "
+"anterior no funcionarà. Per a substituir el perfil preexistent el nou perfil "
 "s'ha de copiar manualment a <file>C:\\Windows\\system32\\spool\\drivers"
 "\\color</file>."
 
@@ -142,10 +142,10 @@ msgid ""
 "<gui>Color</gui> item to the control panel and allows the calibration curves "
 "from default profile to be easily set at each startup."
 msgstr ""
-"Windows XP requereix que un programa s'iniciï durant l'arrencada per copiar "
-"les corbes de calibratge a la targeta de vídeo. Això es pot fer utilitzant "
-"l'<app>Adobe Gamma</app>, el <app>LUT Loader</app> o de franc, utilitzant "
-"el <app href=\"https://www.microsoft.com/download/en/details.aspx?"
+"Windows XP requereix que un programa s'iniciï durant l'arrencada per a "
+"copiar les corbes de calibratge a la targeta de vídeo. Això es pot fer "
+"utilitzant l'<app>Adobe Gamma</app>, el <app>LUT Loader</app> o de franc, "
+"utilitzant el <app href=\"https://www.microsoft.com/download/en/details.aspx?"
 "displaylang=en&amp;id=12714\"> Microsoft Color Control Panel Applet</app>. "
 "Aquest últim afegeix un element nou <gui>Color</gui> al tauler de control i "
 "permet establir fàcilment durant l'arrencada les corbes de calibratge des "
@@ -219,8 +219,8 @@ msgid ""
 "Close the dialog and click <gui>Reload current calibrations</gui> to set the "
 "gamma ramps. The profile calibration curves should now be set for every boot."
 msgstr ""
-"Per establir les rampes de gamma tanqueu el diàleg i feu clic a <gui>Torna a "
-"carregar els calibratges actuals</gui>. A partir d'ara, cada cop que "
+"Per a establir les rampes de gamma tanqueu el diàleg i feu clic a <gui>Torna "
+"a carregar els calibratges actuals</gui>. A partir d'ara, cada cop que "
 "arrenqueu, es carregarà el perfil de les corbes de calibratge."
 
 #. (itstool) path: info/desc
@@ -243,9 +243,9 @@ msgid ""
 msgstr ""
 "De forma similar al Linux, a l'OS X d'Apple els perfils es poden instal·lar "
 "per a tot el sistema o per a un usuari en particular. Els perfils per a tot "
-"el sistema es desen a <file>/Library/ColorSync/Profiles</file> i els que "
-"són per a un usuari en particular es desen a <file>~/Library/ColorSync/"
-"Profiles</file>."
+"el sistema es desen a <file>/Library/ColorSync/Profiles</file> i els que són "
+"per a un usuari en particular es desen a <file>~/Library/ColorSync/Profiles</"
+"file>."
 
 #. (itstool) path: page/p
 #: C/color-import-osx.page:24
@@ -255,5 +255,5 @@ msgid ""
 "device."
 msgstr ""
 "Utilitzeu el programa <guiseq><gui>Preferències del sistema</"
-"gui><gui>Pantalles</gui><gui>Color</gui></guiseq> per importar el fitxer i "
+"gui><gui>Pantalles</gui><gui>Color</gui></guiseq> per a importar el fitxer i "
 "assignar el perfil al dispositiu correcte."
