Update Catalan translation

--- a/help/ca/ca.po
+++ b/help/ca/ca.po
@@ -69,7 +69,7 @@ msgid ""
 "loaded for all users at startup if the <gui>Set for all users</gui> button "
 "is clicked."
 msgstr ""
-"Les corbes de calibratge del perfil es carregen en iniciar la sessió. Les "
+"Les corbes de calibratge del perfil es carreguen en iniciar la sessió. Les "
 "corbes també poden ser carregades per a tots els usuaris si feu clic al botó "
 "<gui>Estableix per a tots els usuaris</gui>."
 
