Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -11,8 +11,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N&component=general\n"
 "POT-Creation-Date: 2017-07-28 09:58+0000\n"
-"PO-Revision-Date: 2016-10-19 12:36+0200\n"
-"Last-Translator: Robert Antoni Buj Gelonch <rbuj@fedoraproject.org>\n"
+"PO-Revision-Date: 2022-09-11 12:36+0200\n"
+"Last-Translator: Jordi Mas i Hernǹandez <jmas@softcatala.org>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
@@ -86,7 +86,7 @@ msgstr "Selector de color"
 
 #: data/gcm-picker.desktop.in:4
 msgid "Use the color sensor to sample spot colors"
-msgstr "Utilitzeu el sensor de color per mostrejar punts de color"
+msgstr "Utilitzeu el sensor de color per a mostrejar punts de color"
 
 #. the color representation
 #. TRANSLATORS: this the ICC colorspace type
@@ -1491,7 +1491,7 @@ msgstr "No hi ha cap perfil ICC per aquesta finestra"
 #. TRANSLATORS: command line option
 #: src/gcm-inspect.c:326
 msgid "Show xserver properties"
-msgstr "Mostra les propietats de l'xserver"
+msgstr "Mostra les propietats del xserver"
 
 #. TRANSLATORS: command line option
 #: src/gcm-inspect.c:329
