--- a/help/ca/ca.po
+++ b/help/ca/ca.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
 "POT-Creation-Date: 2013-08-31 06:39+0000\n"
-"PO-Revision-Date: 2014-08-27 07:59+0100\n"
-"Last-Translator: Manel Vidal <verduler@gmail.com>\n"
+"PO-Revision-Date: 2022-09-11 12:36+0200\n"
+"Last-Translator: Jordi Mas i Hernǹandez <jmas@softcatala.org>\n"
 "Language-Team: gnome\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
@@ -166,7 +166,7 @@ msgid ""
 "careful the calibration state has not been cleared."
 msgstr ""
 "Microsoft Windows Vista erròniament esborra les corbes de calibratge de "
-"vídeo LUT després d'iniciar la sessió, d'aturar temporalment l'ordinador i "
+"vídeo LUT després d'iniciar la sessió, després de suspendre l'ordinador, i "
 "quan apareix la pantalla de l'UAC. Això significa que haurà de recarregar "
 "manualment les corbes de calibratge del perfil ICC. Si esteu utilitzant "
 "perfils amb corbes de calibratge incrustades heu d'anar amb compte de no "
